# ai-invest

./: .coveragerc  .gitignore  .ruff_test.py  Dockerfile  INSTALL.md  Makefile  README.md  dashboard.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: agents.mdc  coinapi.mdc  strategies.mdc
agents/: agent_1_market_expert.py  agent_2_data_analyzer.py  agent_3_ta_strategist.py  agent_4_candlestick_specialist.py  agent_5_investment_evaluator.py  agent_6_time_horizon_advisor.py  agent_7_daytrade_classifier.py  agent_8_daytrade_executor.py  agent_9_longterm_executor.py  ml_agent.py  pipeline.py
agents/ml_models/: __init__.py  pattern_recognizer.py  price_predictor.py  trade_classifier.py
api/: __init__.py  main.py
backtesting/: __init__.py  backtest_engine.py  paper_trading.py
config/: capital_management.py
docs/: API_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md  QUICK_START.md  README.md
scripts/: docker-entrypoint.sh  setup_ollama.sh  test_api_live.py  test_complete_system.py  train_ml_models.py
strategies/: __init__.py  arbitrage.py  base_strategy.py  scalping.py  swing_trading.py
tests/: __init__.py  test_agents.py  test_api_candles.py  test_api_main.py  test_backtesting.py  test_candlestick_patterns.py  test_capital_management.py  test_coinapi_client.py  test_database.py  test_strategies.py  test_technical_indicators.py
utils/: backup_manager.py  candlestick_patterns.py  coinapi_client.py  data_updater.py  database.py  download_historical_data.py  technical_indicators.py
