[project]
name = "ceci-ai"
version = "0.5.0"
description = "Sistema inteligente de trading de criptomoedas com IA - 9 Agentes LLM + Pipeline Orchestrator"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "CeciAI Team"}
]
keywords = ["trading", "cryptocurrency", "ai", "llm", "machine-learning", "bitcoin", "ethereum"]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=. --cov-report=term-missing --cov-report=html --cov-config=.coveragerc"

[tool.ruff]
# Configuração geral
line-length = 100
target-version = "py311"
src = [".", "api", "tests", "utils"]

# Regras de lint
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from-inside-except
]

# Configuração do formatter (substitui Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Configuração do isort (organização de imports)
[tool.ruff.isort]
known-first-party = ["api", "utils", "tests"]
force-single-line = false
combine-as-imports = true

# Configuração por diretório
[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
